# SmokeRand

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile.d32  Makefile.gnu  README.md  cfg_data.lua  cfg_data_out.lua  cfg_find_gens.lua  cfg_ninja.lua  cfg_prngens_funcs.lua  cfg_wmake.lua  make_pkg.sh  ninja_cfg.lua  ninja_out.lua  results.md  smokerand.1  tmfn.txt
apps/: bat_example.c  calibrate_dc6.c  calibrate_linearcomp.c  chacha.h  peparse.c  set80x50.asm  setvesa.asm  smokerand.c  sr_speed.c  sr_tiny.c  test_base64.c  test_chacha.cpp  test_cpp11.cpp  test_crand.c  test_funcs.c  test_rdseed.c  test_syscrypto.c
apps/dc6_calibr_out/: dc6_w32_100m.m  dc6_w64_100m.m  dc6_w8_100m.m
batscripts/: bat_brief.txt  bat_default.txt  bat_express.txt  bat_full.txt  bat_lowmem_16mib.txt  bat_lowmem_2mib.txt  bat_lowmem_4mb.txt  brief.txt  default.txt  express.txt  full.txt  ising.txt  linearcomp.cfg  linearcomp.txt  lram256m.txt  lram_16m.txt  lram_2m.txt  lram_64m.txt  matrix_rank.cfg  unitsphere.txt
docs/: generators.md  plugins.md  results.md  review.md  technotes.md  tests.md
generators/: a16.c  a5rand.c  a5rand32.c  a5rand32w.c  a5randw.c  a8.c  aes128.c  aesni.c  aesni_shared.c  alfib.c  alfib8x5.c  alfib_lux.c  alfib_mod.c  alfib_mod_shared.c  alfib_shared.c  ara32.c  arxfw16.c  arxfw16ex2.c  arxfw32.c  arxfw64.c  arxfw8.c  arxfw8ex.c  arxfw8ex2.c  biski16.c  biski16_alt.c  biski16_mul.c  biski32.c  biski32_alt.c  biski64.c  biski64_alt.c  biski64_mul.c  biski8.c  biski8_alt.c  biski8_mul.c  blabla.c  chacha.c  chacha_avx.c  chacha_avx_shared.c  chacha_shared.c  cmwc4096.c  (+350 more)
generators/!/: magma_avx_shared.c
generators/!!/: magma_avx_shared.c
generators/!!/x/: magma_avx_shared.c
generators/asm/: xkiss16_awc_nt32.asm  xkiss32_awc_nt32.asm
include/: smokerand_bat.h  smokerand_core.h
include/smokerand/: apidefs.h  bat_antilcg.h  bat_brief.h  bat_default.h  bat_express.h  bat_file.h  bat_full.h  bat_special.h  blake2s.h  cinterface.h  core.h  coretests.h  cpuinfo.h  entropy.h  extratests.h  fileio.h  hwtests.h  int128defs.h  lineardep.h  pe32loader.h  plugindefs.h  smokerand_core.h  specfuncs.h  threads_intf.h  version.h  x86exts.h
misc/: lcg64_dec.py  lfib_practrand.py  mwc63_search.py  mwc63x2_check.py  mwc63x2_ref.py  mwc_ntap.py  mwc_prime.py  mwc_to_lcg.py  pyrand.py  spectral.py
scripts/: run_express.sh  run_selftests.sh
src/: base64.c  bat_antilcg.c  bat_brief.c  bat_default.c  bat_dos16.c  bat_express.c  bat_file.c  bat_full.c  bat_special.c  blake2s.c  calibrate_dc6.c  calibrate_linearcomp.c  core.c  coretests.c  cpuinfo.c  dc6_100m.m  dc6_25m.m  dc6_500m.m  entropy.c  extratests.c  fileio.c  hwtests.c  lineardep.c  outhc256.c  outlcg64.c  pe32loader.c  peparse.c  smokerand.c  smokerand_core.c  specfuncs.c  sr_tiny.c  test_cpp11.cpp  test_funcs.c  testgens.c  threads_intf.c
